import grpc
import asyncio

class HyperService:
    async def DispatchStream(self, request, context):
        """
        Processes incoming binary payloads asynchronously 
        across the distributed cluster nodes.
        """
        print(f"Incoming stream from Node: {request.node_id}")
        return {"code": "SUCCESS", "cluster_node": "edge-node-01"}

async def serve():
    server = grpc.aio.server()
    print("HyperService Engine active on port 50051...")
    # Real implementation would register the servicer here
    await server.add_insecure_port('[::]:50051')
    await server.start()
    await server.wait_for_termination()

if __name__ == '__main__':
    asyncio.run(serve())